# jinya-cms

./: .babelrc  .dockerignore  .editorconfig  .env  .env.dist  .eslintignore  .eslintrc  .eslintrc.js  .eslintrc.json  .gitignore  .gitlab-ci.yml  .gitmodules  .htaccess  .php_cs.cache  .phpstorm.meta.php  .prettierignore  .prettierrc  .stylelintrc.json  .travis.yml  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cms  Dockerfile.dev  Jenkinsfile  LICENSE  README.md  SymfonyRequirements.php  UPGRADE_15_TO_16.md  Vagrantfile  _config.yml  build.sh  codeception.yml  composer.json  defines.php  docker-compose.yml  eslint.config.cjs  index.html  (+30 more)
.circleci/: config.yml
.github/: dependabot.yml
.gitlab/: dependabot.yml
.phive/: phars.xml
app/: AppKernel.php  dependencies.php  middleware.php  repositories.php  routes.php  settings.php
backend/: Dockerfile  Jenkinsfile  LICENSE  UPGRADE_15_TO_16.md
classDocs/: index.html
cli/: console
config/: bundles.php  services.yaml  services.yml
designer/: .eslintrc.js  .gitignore  Dockerfile  LICENSE_MIT  docker-compose.yml  index.html  main.js  package-lock.json  package.json  rollup.config.js
docker/: apache.dockerfile  cli.dockerfile  dev.dockerfile  entrypoint.sh  vhost.conf
docs/: api-v1.0.0.yaml  index.html
guides/: index.rst
jinya-designer/: index.html
migrations/: 0001-brute-force-prevention.php  0002-blog.php  0003-category-webhook.php  0004-category-name-not-unique.php  0005-collation-utf8mb4.php  0006-form-item-bool-columns.php  0007-artist-dark-light-switch.php  Blog.php  (+23 more)
(+4446 files in other folders)
