[package]
name = "jinya-designer"
version = "16.0.0"
authors = ["Imanuel Ulbricht <imanuel.ulbricht@jinya.de"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.17"
strum_macros = "0.17"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "1.0.59"
wasm-bindgen = "0.2.58"
wasm-bindgen-futures = "0.4.15"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
http = "0.2.1"
anyhow = "1.0.31"
yew = "0.17.2"
yew-router = "0.14.0"
jinya-ui = "1.0.5"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
chrono = "0.4.13"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'KeyboardEvent',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
    'Navigator',
    'UrlSearchParams',
    'FileReader'
]
